Dev (#56)
* updated workflows #10 (#20)

* updated workflows #10

* updated .secrets.baseline #10

* updated .secrets.baseline #10

* updated security workflow #10

* updated dast workflow, added required labels, updated pr template #10

* updated required labels workflow #10

* updated labels workflow and pr template #10

* updated workflows #10

* updated workflows #10

* updated security workflow #10

* updated .secrets.baseline #10

* updated security workflow #10

* updated security workflow #10

* updated security workflow #10

* updated security workflow and .secrets.baseline #10

* updated ci workflow #10

* updated dast workflow #10 (#23)

* #10 Unit tests added (#19)

* #10 integration tests added

* #9 implement JWT authentication and update user login response (#18)

* #9 implement JWT authentication and update user login response

* #9 enhance JWT handling and security: load secret from config, mask user password in responses, and improve password change logic

* #9 fixed tag

* #10 refactor authentication tests to use Authentication object instead of UserDetails and update response handling

---------

Co-authored-by: Carlos Pereira <carlos.pereira@amparo.world>

* #10 improve integration test  (#28)

* #9 implement JWT authentication and update user login response

* Unit tests added #10

* Unit tests added #10

* #10 add integration tests for Address and Authentication features, and update pom.xml for H2 database dependency

* POM and application.properties updated
docker-compose.yml and prometheus.yml files added #9

* #9 enhance JWT handling and security: load secret from config, mask user password in responses, and improve password change logic

* Integration tests added #10

* configure application to use environment variables for database #9

* Pipeline errors fixed #10 #9

* configure workflow to use environment variables for sensitive data #9

* #9 fixed tag

* configure variables #9

* #10 refactor authentication tests to use Authentication o